# raccoon

./: .gitmodules  CMakeLists.txt
cmake/: toolchain-i686-w64-mingw32.cmake
include/raccoon/: medals.hpp  raccoon.hpp
resources/data/raccoon/medals/: h4.txt
resources/tags/globals/: dummy.hud_globals  globals.globals
resources/tags/raccoon/: raccoon.scenario
resources/tags/raccoon/medals/: h4.tag_collection
resources/tags/raccoon/medals/h4/images/: avenger.bitmap  comeback_kill.bitmap  double_kill.bitmap  extermination.bitmap  flag_capture.bitmap  flag_champion.bitmap  flag_runner.bitmap  from_the_grave.bitmap  glow.bitmap  headshot.bitmap  inconceivable.bitmap  invincible.bitmap  kill.bitmap  killimanjaro.bitmap  killing_frenzy.bitmap  killing_spree.bitmap  killionaire.bitmap  killjoy.bitmap  killpocalypse.bitmap  killtacular.bitmap  killtastrophe.bitmap  killtrocity.bitmap  overkill.bitmap  rampage.bitmap  revenge.bitmap  running_riot.bitmap  triple_kill.bitmap  unfriggenbelievable.bitmap  untouchable.bitmap
resources/tags/raccoon/medals/h4/sounds/: comeback_kill.sound  (+14 more)
resources/tags/ui/: ui_tags_loaded_all_scenario_types.tag_collection  ui_tags_loaded_mainmenu_scenario_type.tag_collection
src/: logger.hpp  main.cpp  resources.hpp
src/medals/: base.cpp  base.hpp  h4.cpp  h4.hpp  medal.cpp  medal.hpp  medals.cpp  medals.hpp  queue.cpp  queue.hpp  render_queue.cpp  render_queue.hpp
src/postprocess/: pixelate_filter.cpp  pixelate_pixel_shader.cso  pixelate_pixel_shader.hlsl  postprocess.hpp  shaders.rc
src/resources/: resources.cpp  resources.hpp
